# SimonJonesArtifact

./: .gitignore  .gitmodules  .markdownlintignore  .mdlrc  README.md  ddpg_actor.h5  ddpg_critic.h5  ddpg_flight.py  ddpg_target_actor.h5  ddpg_target_critic.h5  flake.nix  generate.py  myflight.py  service_proxies.py  setup.sh  sim.sdf  simulation_nodes.py  ssh_vm  sshfs_mount_vm
catkin_ws/: maybe_requirements.txt
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
launch/: clover_model.launch  clover_services.launch  gazebo.launch  px4.launch
models/: grab_deck_extended.dwg  (+5 more)
src/cpp_srvcli/: CMakeLists.txt  package.xml
src/cpp_srvcli/src/: add_three_ints_client.cpp  add_three_ints_server.cpp
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: Sphere.msg
src/more_interfaces/: CMakeLists.txt  package.xml
src/more_interfaces/src/: publish_address_book.cpp
src/pcg/: CMakeLists.txt  package.xml  requirements.txt  setup.py
src/pcg/launch/: generate.launch  setup.launch
src/pcg/models/ceiling_10/: model.config  model.sdf
src/pcg/models/ceiling_10/meshes/: muIWsphSSW.stl
src/pcg/models/ceiling_11/: model.config  model.sdf
src/pcg/models/ceiling_11/meshes/: lxhdcesXbC.stl
src/pcg/models/ceiling_2/: model.config  model.sdf
src/pcg/models/ceiling_2/meshes/: OvbnrBHXzw.stl  blxqPNCRUC.stl
src/pcg/models/ceiling_3/: model.config  model.sdf
src/pcg/models/ceiling_3/meshes/: pAPyqPrUWV.stl
src/pcg/models/ceiling_4/: model.config  model.sdf
src/pcg/models/ceiling_4/meshes/: tZqEuFnRRY.stl
src/pcg/models/ceiling_5/: model.config  model.sdf
src/pcg/models/ceiling_5/meshes/: sSuWgHZocb.stl
src/pcg/models/ceiling_6/: model.config  model.sdf
src/pcg/models/ceiling_6/meshes/: xiEVzPppiS.stl
src/pcg/models/ceiling_7/: model.config  model.sdf
src/pcg/models/ceiling_7/meshes/: QUSjOwQmOW.stl
src/pcg/models/ceiling_8/: model.config  model.sdf
src/pcg/models/ceiling_8/meshes/: NWgnvBJaPz.stl
src/pcg/models/ceiling_9/: model.config  model.sdf
src/pcg/models/ceiling_9/meshes/: WpCPptBjsI.stl
src/pcg/models/walls_10/: model.config  model.sdf
src/pcg/models/walls_10/meshes/: axOTAvSVmB.stl
src/pcg/models/walls_11/: model.config  model.sdf
src/pcg/models/walls_11/meshes/: RSPmttjdyt.stl
src/pcg/models/walls_2/: model.config  model.sdf
src/pcg/models/walls_2/meshes/: BRfHkvZeyJ.stl  EzhHJXacII.stl
src/pcg/models/walls_3/: model.config  model.sdf
src/pcg/models/walls_3/meshes/: WgEBodrpuE.stl
src/pcg/models/walls_4/: model.config  model.sdf
src/pcg/models/walls_4/meshes/: BunVcqelYv.stl
src/pcg/models/walls_5/: model.config  model.sdf
src/pcg/models/walls_5/meshes/: hYbnJpnbav.stl
src/pcg/models/walls_6/: model.config  model.sdf
src/pcg/models/walls_6/meshes/: uIzRWEbFZR.stl
src/pcg/models/walls_7/: model.config  model.sdf
src/pcg/models/walls_7/meshes/: uKSGVSgfqI.stl
src/pcg/models/walls_8/: model.config  model.sdf
src/pcg/models/walls_8/meshes/: THKzzYzZbQ.stl
src/pcg/models/walls_9/: model.config  model.sdf
src/pcg/models/walls_9/meshes/: iLuVSdALeZ.stl
src/pcg/resources/worlds/: 10-rectangles-walls.world  10-rectangles-walls.world-free-poses.xml  11-rectangles-walls.world  11-rectangles-walls.world-free-poses.xml  2-rectangles-walls.world  2-rectangles-walls.world-free-poses.xml  3-rectangles-walls.world  3-rectangles-walls.world-free-poses.xml  4-rectangles-walls.world  4-rectangles-walls.world-free-poses.xml  5-rectangles-walls.world  5-rectangles-walls.world-free-poses.xml  6-rectangles-walls.world  6-rectangles-walls.world-free-poses.xml  7-rectangles-walls.world  7-rectangles-walls.world-free-poses.xml  8-rectangles-walls.world  8-rectangles-walls.world-free-poses.xml  9-rectangles-walls.world  9-rectangles-walls.world-free-poses.xml
src/pcg/scripts/: broadcast  broadcast.py  generate  generate.py  generate.py.sh  setup.py
src/pcg/src/pcg/: __init__.py  generate.py  main.py
src/pcg/srv/: GetPcgMapMetadata.srv
(+38 files in other folders)
