<?xml version="1.0"?>
<package format="3">
  <name>pcg</name>
  <version>0.0.1</version>
  <description>Wrapper for pcg_gazebo</description>
  <maintainer email="github@simonjjones.com">Simon Jones</maintainer>
  <license>MIT</license>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
